# rss-tui

./: Cargo.toml  feeds.txt
src/: app.rs  event.rs  feed.rs  main.rs  rss.rs
src/event/: keys.rs  listener.rs  mod.rs
