[package]
name = "rss-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0.1"
tui = "0.19.0"
crossterm = { version = "0.25", features = ["event-stream"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.22"
